--- a/src/App.css
+++ b/src/App.css
@@ -285,6 +285,7 @@ h6{
     display:flex;
     gap: 5%;
     height: 300vh;
+    overflow-y: hidden;
 }
 .title h1{
     margin-top:0 ;
@@ -326,4 +327,11 @@ h6{
 }
 .cardt{
     width: 75%;
+}
+.mou5ad3{
+    width:30%;
+    height: 65vh;
+}
+.fixed{
+    position:fixed;
 }
